# DocClean-Net

./: .gitignore  APPLY_NOTEBOOK_5_2.md  APPLY_PHASE5_1.md  APPLY_PHASE5_1_1.md  APPLY_PHASE5_1_2.md  LICENSE  README.md  _gitignore_updated  current_status.md  phase4-tasks1-2-changes.patch  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmark_results/: metrics.csv
checkpoints/: train_log_v1.1.csv  train_log_v1_1.csv.csv
classic_pipeline/: digitize_notebook.py
data/: augmentation.py  generate_dataset.py
data/generators/: degradations.py  illumination.py  paper.py  strokes.py
gui/: digitize_gui.py  inference_core.py  inference_gui.py
inference/: benchmark.py  io_utils.py  predict.py
model/: dataset.py  losses.py  train.py  unet.py
notebooks/: 02_training_colab.ipynb
phase4-tasks1-2-modified-files/: pyproject.toml  requirements-dev.txt
phase4-tasks1-2-modified-files/classic_pipeline/: digitize_notebook.py
phase4-tasks1-2-modified-files/data/: augmentation.py  generate_dataset.py
phase4-tasks1-2-modified-files/data/generators/: degradations.py  paper.py  strokes.py
phase4-tasks1-2-modified-files/gui/: digitize_gui.py  inference_gui.py
phase4-tasks1-2-modified-files/inference/: benchmark.py  io_utils.py  predict.py
phase4-tasks1-2-modified-files/model/: dataset.py  train.py  unet.py
phase4-tasks1-2-modified-files/scripts/: run_pipeline.py  thicken_strokes.py  visualize_results.py
phase4-tasks1-2-modified-files/tests/: conftest.py  test_dataset.py  test_generators.py  test_inference.py  test_inference_core.py  test_losses.py  test_train.py  test_unet.py
scripts/: boost_black.py  download_model.py  harvest_backgrounds.py  run_pipeline.py  thicken_strokes.py  visualize_results.py
tests/: conftest.py  test_dataset.py  test_generators.py  test_harvest_backgrounds.py  test_illumination.py  test_inference.py  test_inference_core.py  test_losses.py  test_scripts.py  test_train.py  test_unet.py
