[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docclean-net"
version = "0.1.0"
description = "Remove structured backgrounds from scanned handwritten documents using a classic CV pipeline and a lightweight U-Net."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jose (olijuseju)", email = "olijuseju@users.noreply.github.com" }]
keywords = ["computer-vision", "document-enhancement", "u-net", "opencv", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "torch>=2.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "pytorch-msssim>=0.2.1",
    "piq>=0.8.0",
    "tqdm>=4.65.0",
    "ttkbootstrap>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "torchinfo>=1.8.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
]

[project.scripts]
docclean-classic = "classic_pipeline.digitize_notebook:main"
docclean-gui     = "gui.digitize_gui:main"
docclean-inference-gui = "gui.inference_gui:main"

[project.urls]
Repository = "https://github.com/olijuseju/DocClean-Net"
Issues     = "https://github.com/olijuseju/DocClean-Net/issues"

# ── Tool configuration ──────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["classic_pipeline*", "gui*", "data*", "model*", "inference*"]

[tool.black]
line-length    = 88
target-version = ["py310"]

[tool.ruff]
line-length     = 88
target-version  = "py310"
extend-exclude  = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
# Standalone scripts insert the repo root into sys.path before importing
# local packages, so those imports can't be at the very top of the file.
"scripts/*.py" = ["E402"]
# ttkbootstrap's documented usage pattern is `from ttkbootstrap.constants import *`.
"gui/digitize_gui.py" = ["F403"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
# Exclude heavy integration tests that require a trained checkpoint
markers      = [
    "slow: tests that require a trained model or large dataset (deselect with -m 'not slow')",
]

[tool.coverage.run]
source  = ["classic_pipeline", "data", "model", "inference"]
omit    = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
skip_empty   = true
